create index, create css

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
  <title>Wikipedia, the free encyclopedia</title>
 
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b3/Wikipedia-logo-v2-en.svg/500px-Wikipedia-logo-v2-en.svg.png" alt="wikipedia logo">
 </html>
