add wiki logo and bootstrap cdn

--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <!DOCTYPE html>
  <title>Wikipedia, the free encyclopedia</title>
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"></link>
 
+<div class="container">
+ <div class="row">
+  <div class="col-md-1">
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b3/Wikipedia-logo-v2-en.svg/500px-Wikipedia-logo-v2-en.svg.png" alt="wikipedia logo">
+  <div class="panel panel-info">
+    <h2 class="panel heading">Welcome to Wikipedia,</h2>
+    <div class="panel body">
+    
+    </div>
+  </div>
+  </div>
+ </div>
+ </div>
 </html>
